[package]
name = "wudao"
version = "0.1.1"
authors = ["sgk"]
edition = "2018"
description = "a console dictionary"
license-file = "LICENSE"


[[bin]]
name = "wd"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4"
console = "0.15.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
select = "0.6.0"
